--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
         android:id="@+id/main_logo"
         android:layout_width="402dp"
         android:layout_height="382dp"
-        android:src="@drawable/ss"
+        android:src="@drawable/sis"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
