--- a/app/src/main/res/layout/fragment_signfrag.xml
+++ b/app/src/main/res/layout/fragment_signfrag.xml
@@ -9,26 +9,103 @@
 
     <EditText
         android:id="@+id/editTextText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_width="245dp"
+        android:layout_height="49dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/inputsize"
         android:ems="10"
+        android:hint="UserName"
         android:inputType="text"
-        android:text="Name"
+        android:paddingLeft="13dp"
+        android:paddingTop="11dp"
+        android:paddingRight="13dp"
+        android:paddingBottom="11dp"
+        android:shadowColor="#000000"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="212dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/loground"
+        android:text="Button"
+        android:textColor="#FBF8F8"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText6"
+        app:layout_constraintHorizontal_bias="0.424"
+        app:layout_constraintStart_toStartOf="@+id/editTextText6" />
+
+    <EditText
+        android:id="@+id/editTextText5"
+        android:layout_width="245dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/inputsize"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="text"
+        android:paddingLeft="13dp"
+        android:paddingTop="11dp"
+        android:paddingRight="13dp"
+        android:paddingBottom="11dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editTextText6"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editTextText3"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/editTextText6"
+        android:layout_width="245dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/inputsize"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="text"
+        android:paddingLeft="13dp"
+        android:paddingTop="11dp"
+        android:paddingRight="13dp"
+        android:paddingBottom="11dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText5"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editTextText5"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextText3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="245dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/inputsize"
         android:ems="10"
+        android:hint="Password"
         android:inputType="text"
-        android:text="Name"
+        android:paddingLeft="13dp"
+        android:paddingTop="11dp"
+        android:paddingRight="13dp"
+        android:paddingBottom="11dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editTextText5"
         app:layout_constraintEnd_toEndOf="@+id/editTextText2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/editTextText2"
-        tools:layout_editor_absoluteY="204dp" />
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
