--- a/app/src/main/res/layout/fragment_logfrag.xml
+++ b/app/src/main/res/layout/fragment_logfrag.xml
@@ -1,14 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".logfrag">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/editTextText"
+        android:layout_width="245dp"
+        android:layout_height="49dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/inputsize"
+        android:ems="10"
+        android:hint="UserName"
+        android:inputType="text"
+        android:paddingLeft="13dp"
+        android:paddingTop="11dp"
+        android:paddingRight="13dp"
+        android:paddingBottom="11dp"
+        android:shadowColor="#000000"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextText4"
+        android:layout_width="245dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="52dp"
+        android:background="@drawable/inputsize"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="text"
+        android:paddingLeft="13dp"
+        android:paddingTop="11dp"
+        android:paddingRight="13dp"
+        android:paddingBottom="11dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editTextText" />
+
+    <TextView
+        android:layout_width="111dp"
+        android:layout_height="18dp"
+        android:text="Reset Password"
+        android:textColor="#FFFFFF"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editTextText4"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
+        app:layout_constraintVertical_bias="0.588" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="212dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="92dp"
+        android:background="@drawable/loground"
+        android:text="Button"
+        android:textColor="#FBF8F8"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
+        app:layout_constraintStart_toStartOf="@+id/editTextText4" />
+</androidx.constraintlayout.widget.ConstraintLayout>
