--- a/app/src/main/res/layout/fragment_logfrag.xml
+++ b/app/src/main/res/layout/fragment_logfrag.xml
@@ -51,6 +51,7 @@
         app:layout_constraintStart_toStartOf="@+id/editTextText" />
 
     <TextView
+        android:id="@+id/txt"
         android:layout_width="111dp"
         android:layout_height="18dp"
         android:text="Reset Password"
