--- a/app/src/main/res/layout/fragment_signfrag.xml
+++ b/app/src/main/res/layout/fragment_signfrag.xml
@@ -49,7 +49,7 @@
         android:layout_marginBottom="12dp"
         android:background="@drawable/inputsize"
         android:ems="10"
-        android:hint="Password"
+        android:hint="Email"
         android:inputType="text"
         android:paddingLeft="13dp"
         android:paddingTop="11dp"
@@ -93,7 +93,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/inputsize"
         android:ems="10"
-        android:hint="Password"
+        android:hint="Phone No"
         android:inputType="text"
         android:paddingLeft="13dp"
         android:paddingTop="11dp"
