--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,8 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="SignIn"
-            android:background="@drawable/loground"/>
+            android:background="@drawable/loground"
+            android:text="SignUp" />
     </LinearLayout>
 
     <LinearLayout
