--- a/app/src/main/res/layout/fragment_logfrag.xml
+++ b/app/src/main/res/layout/fragment_logfrag.xml
@@ -70,7 +70,7 @@
         android:layout_height="45dp"
         android:layout_marginBottom="92dp"
         android:background="@drawable/loground"
-        android:text="Button"
+        android:text="LogIn"
         android:textColor="#FBF8F8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/editTextText4"
